--- a/menu3.html
+++ b/menu3.html
@@ -31,9 +31,7 @@
 
     <main>
         <!--Image background-->
-        <section class="background">
-            <img src="./Maquettes/images/restocomp/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo restaurant A la française">
-        </section>
+        <div class="background3"></div>
 
         <!--Menu-->
         <section class="menu">
