--- a/menu4.html
+++ b/menu4.html
@@ -31,9 +31,7 @@
 
     <main>
         <!--Image background-->
-        <section class="background">
-            <img src="./Maquettes/images/restocomp/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo restaurant le délice des sens">
-        </section>
+        <div class="background4"></div>
 
         <!--Menu-->
         <section class="menu">
