--- a/menu1.html
+++ b/menu1.html
@@ -31,7 +31,7 @@
 
     <main>
         <!--Image background-->
-        <div class="background"></div>
+        <div class="background1"></div>
 
         <!--Menu-->
         <section class="menu">
