--- a/menu2.html
+++ b/menu2.html
@@ -31,9 +31,7 @@
 
     <main>
         <!--Image background-->
-        <section class="background">
-            <img src="./Maquettes/images/restocomp/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo restaurant la note enchantée">
-        </section>
+        <div class="background2"></div>
 
         <!--Menu-->
         <section class="menu">
