animation check + coeur

--- a/menu1.html
+++ b/menu1.html
@@ -45,7 +45,7 @@
                 <!--Entrées-->
 
 
-                <div class=menu__choix>
+                <div class="menu__choix">
                     <h2>ENTRÉES</h2>
                     <hr>
 
@@ -58,7 +58,7 @@
                             </div>
                         </div>
 
-                        <div class="menu__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
@@ -70,7 +70,7 @@
                             </div>
                         </div>
 
-                        <div class="menu__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
@@ -82,7 +82,7 @@
                             </div>
                         </div>
 
-                        <div class="menu__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
@@ -99,7 +99,7 @@
                             </div>
                         </div>
 
-                        <div class="menu__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
 
@@ -113,7 +113,7 @@
                             </div>
                         </div>
 
-                        <div class="menu__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
@@ -125,7 +125,7 @@
                             </div>
                         </div>
 
-                        <div class="menu__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
@@ -144,7 +144,7 @@
                             </div>
                         </div>
 
-                        <div class="menu__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
@@ -156,7 +156,7 @@
                             </div>
                         </div>
 
-                        <div class="menu__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
 
@@ -168,7 +168,7 @@
                                 <p>23€</p>
                             </div>
                         </div>
-                        <div class="menu__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
 
