--- a/index.html
+++ b/index.html
@@ -78,23 +78,7 @@
                         <p class="restaurants__nouveau">Nouveau</p>
                         <div class="restaurants__cartes__texte">
                             <p><b>La palette du gôut</b><br>Ménilmontant</p>
-                            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 50 50" preserveAspectRatio="xMidYMid meet">
-                                <g transform="translate(0.000000,1280.000000) scale(0.100000,-0.100000)"
-                                fill="#FF79DA" stroke="#FF79DA">
-                                <path d="M5120 9019 c-413 -37 -793 -219 -1086 -520 -241 -249 -390 -538 -461
-                                -894 -25 -128 -25 -492 0 -620 53 -266 158 -511 308 -718 54 -74 2504 -2537
-                                2524 -2537 16 0 2415 2407 2472 2480 222 286 343 594 374 958 34 389 -83 809
-                                -319 1142 -86 121 -270 306 -392 392 -522 370 -1204 427 -1775 149 -102 -50
-                                -229 -128 -300 -185 -22 -18 -45 -35 -51 -39 -6 -3 -58 27 -115 68 -122 88
-                                -345 202 -477 245 -124 40 -263 67 -402 80 -128 11 -164 11 -300 -1z m462
-                                -278 c270 -58 515 -188 721 -381 l98 -93 27 24 c15 13 62 56 105 96 175 162
-                                379 272 624 337 274 73 605 58 873 -39 715 -259 1115 -1021 923 -1760 -50
-                                -193 -132 -363 -249 -517 -39 -52 -476 -496 -1183 -1203 l-1121 -1120 -1121
-                                1120 c-720 720 -1143 1150 -1184 1204 -123 163 -219 379 -266 601 -29 139 -32
-                                408 -6 545 43 222 146 458 271 625 134 179 342 350 540 444 137 66 325 121
-                                476 140 90 11 377 -3 472 -23z"/>
-                                </g>
-                                </svg>
+                            <svg viewBox="0 -28 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M471.383 44.578C444.879 15.832 408.512 0 368.973 0c-29.555 0-56.621 9.344-80.45 27.77C276.5 37.07 265.605 48.45 256 61.73c-9.602-13.277-20.5-24.66-32.527-33.96C199.648 9.344 172.582 0 143.027 0c-39.539 0-75.91 15.832-102.414 44.578C14.426 72.988 0 111.801 0 153.871c0 43.3 16.137 82.938 50.781 124.742 30.992 37.395 75.535 75.356 127.117 119.313 17.614 15.012 37.579 32.027 58.309 50.152A30.023 30.023 0 00256 455.516c7.285 0 14.316-2.641 19.785-7.43 20.73-18.129 40.707-35.152 58.328-50.172 51.575-43.95 96.117-81.906 127.11-119.305C495.867 236.81 512 197.172 512 153.867c0-42.066-14.426-80.879-40.617-109.289zm0 0"/></svg>
                         </div>
                     </a>
 
@@ -103,8 +87,7 @@
                         <p class="restaurants__nouveau">Nouveau</p>
                         <div class="restaurants__cartes__texte">
                             <p><b>La note enchantée</b><br>Charonne</p>
-                            <img class="coeur" src="./Maquettes/images/svg/coeuruni.svg">
-
+                            <svg viewBox="0 -28 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M471.383 44.578C444.879 15.832 408.512 0 368.973 0c-29.555 0-56.621 9.344-80.45 27.77C276.5 37.07 265.605 48.45 256 61.73c-9.602-13.277-20.5-24.66-32.527-33.96C199.648 9.344 172.582 0 143.027 0c-39.539 0-75.91 15.832-102.414 44.578C14.426 72.988 0 111.801 0 153.871c0 43.3 16.137 82.938 50.781 124.742 30.992 37.395 75.535 75.356 127.117 119.313 17.614 15.012 37.579 32.027 58.309 50.152A30.023 30.023 0 00256 455.516c7.285 0 14.316-2.641 19.785-7.43 20.73-18.129 40.707-35.152 58.328-50.172 51.575-43.95 96.117-81.906 127.11-119.305C495.867 236.81 512 197.172 512 153.867c0-42.066-14.426-80.879-40.617-109.289zm0 0"/></svg>
                         </div>
                     </a>
 
@@ -112,8 +95,7 @@
                         <img src="./Maquettes/images/restocomp/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Carte du restaurant A la française">
                         <div class="restaurants__cartes__texte">
                             <p><b>A la française</b><br>Cité Rouge</p>
-                            <img class="coeur" src="./Maquettes/images/svg/coeuruni.svg">
-
+                            <svg viewBox="0 -28 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M471.383 44.578C444.879 15.832 408.512 0 368.973 0c-29.555 0-56.621 9.344-80.45 27.77C276.5 37.07 265.605 48.45 256 61.73c-9.602-13.277-20.5-24.66-32.527-33.96C199.648 9.344 172.582 0 143.027 0c-39.539 0-75.91 15.832-102.414 44.578C14.426 72.988 0 111.801 0 153.871c0 43.3 16.137 82.938 50.781 124.742 30.992 37.395 75.535 75.356 127.117 119.313 17.614 15.012 37.579 32.027 58.309 50.152A30.023 30.023 0 00256 455.516c7.285 0 14.316-2.641 19.785-7.43 20.73-18.129 40.707-35.152 58.328-50.172 51.575-43.95 96.117-81.906 127.11-119.305C495.867 236.81 512 197.172 512 153.867c0-42.066-14.426-80.879-40.617-109.289zm0 0"/></svg>
                         </div>
                     </a>
 
@@ -121,8 +103,7 @@
                         <img src="./Maquettes/images/restocomp/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Carte du restaurant Le délice des sens">
                         <div class="restaurants__cartes__texte">
                             <p><b>Le délice des sens</b><br>Folie-Méricourt</p>
-                            <img class="coeur" src="./Maquettes/images/svg/coeuruni.svg">
-
+                            <svg viewBox="0 -28 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M471.383 44.578C444.879 15.832 408.512 0 368.973 0c-29.555 0-56.621 9.344-80.45 27.77C276.5 37.07 265.605 48.45 256 61.73c-9.602-13.277-20.5-24.66-32.527-33.96C199.648 9.344 172.582 0 143.027 0c-39.539 0-75.91 15.832-102.414 44.578C14.426 72.988 0 111.801 0 153.871c0 43.3 16.137 82.938 50.781 124.742 30.992 37.395 75.535 75.356 127.117 119.313 17.614 15.012 37.579 32.027 58.309 50.152A30.023 30.023 0 00256 455.516c7.285 0 14.316-2.641 19.785-7.43 20.73-18.129 40.707-35.152 58.328-50.172 51.575-43.95 96.117-81.906 127.11-119.305C495.867 236.81 512 197.172 512 153.867c0-42.066-14.426-80.879-40.617-109.289zm0 0"/></svg>
                         </div>
                     </a>
 
