--- a/menu2.html
+++ b/menu2.html
@@ -45,100 +45,147 @@
                 <!--Entrées-->
 
 
-                <div class="menu__entrees">
+                <div class="menu__choix">
                     <h2>ENTRÉES</h2>
                     <hr>
 
                     <div class="btn__menu">
-                        <div class="menu__entrees__titre">
-                            <p><b>Ravioles de foie gras</b><br>Accompagnés de leur crème à la truffe</p>
+                        <div class="menu__titre">
+                            <p><b>Ravioles de foie gras</b></p>
+                            <div class="menu__prix">
+                                <p>Accompagnés de leur crème à la truffe</p>
+                                <p>25€</p>
+                            </div>
                         </div>
-                        <div class="menu__entrees__prix"><b>25€</b></div>
-                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
-                        <div class="menu__entrees__titre">
-                            <p><b>Caviar osciètre </b><br>Sur blini à la farine de blé noir</p>
+                        <div class="menu__titre">
+                            <p><b>Caviar osciètre </b></p>
+                            <div class="menu__prix">
+                                <p>Sur blini à la farine de blé noir</p>
+                                <p>35€</p>
+                            </div>
                         </div>
-                        <div class="menu__entrees__prix"><b>35€</b></div>
-                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
-                        <div class="menu__entrees__titre">
-                            <p><b>Homard et espuma de potiron</b><br>Mariné aux zestes d'orange</p>
+                        <div class="menu__titre">
+                            <p><b>Homard et espuma de potiron</b></p>
+                            <div class="menu__prix">
+                                <p>Mariné aux zestes d'orange</p>
+                                <p>20€</p>
+                            </div>
                         </div>
-                        <div class="menu__entrees__prix"><b>20€</b></div>
-                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
-                        <div class="menu__entrees__titre">
-                            <p><b>Foie gras de canard cuit entier</b><br>Confiture de figue et pain toasté</p>
+                        <div class="menu__titre">
+                            <p><b>Foie gras de canard cuit entier</b></p>
+                            <div class="menu__prix">
+                                <p>Confiture de figue et pain toasté</p>
+                                <p>20€</p>
+                            </div>
                         </div>
-                        <div class="menu__entrees__prix"><b>35€</b></div>
-                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
 
                 <!--plats-->
-                <div class="menu__plats">
+                <div class="menu__choix">
                     <h2>PLATS</h2>
                     <hr>
                     <div class="btn__menu">
-                        <div class="menu__plats__titre">
-                            <p><b>Noix de coquilles Saint-Jacques</b><br>Sur lit de purée de céleri-rave</p>
+                        <div class="menu__titre">
+                            <p><b>Noix de coquilles Saint-Jacques</b></p>
+                            <div class="menu__prix">
+                                <p>Sur lit de purée de céleri-rave</p>
+                                <p>40€</p>
+                            </div>
                         </div>
-                        <div class="menu__plats__prix"><b>40€</b></div>
-                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
+                    </div>
+
+
+
+                    <div class="btn__menu">
+                        <div class="menu__titre">
+                            <p><b>Langoustine poêlée</b></p>
+                            <div class="menu__prix">
+                                <p>Purée de patate douce</p>
+                                <p>35€</p>
+                            </div>
+                        </div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
-                        <div class="menu__plats__titre">
-                            <p><b>Langoustine poêlée</b><br>Purée de patate douce</p>
+                        <div class="menu__titre">
+                            <p><b>Mijoté de queue de boeuf </b></p>
+                            <div class="menu__prix">
+                                <p>Et riz sauvage aux zestes de citron</p>
+                                <p>44€</p>
+                            </div>
                         </div>
-                        <div class="menu__plats__prix"><b>35€</b></div>
-                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
-                    </div>
 
-                    <div class="btn__menu">
-                        <div class="menu__plats__titre">
-                            <p><b>Mijoté de queue de boeuf </b><br>Et riz sauvage aux zestes de citron</p>
-                        </div>
-                        <div class="menu__plats__prix"><b>44€</b></div>
-                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
+
                 <!--desserts-->
-                <h2>DESSERTS</h2>
-                <hr>
-                <div class="menu__desserts">
+
+                <div class="menu__choix">
+                    <h2>DESSERTS</h2>
+                    <hr>
+
                     <div class="btn__menu">
-                        <div class="menu__desserts__titre">
-                            <p><b>Macaron noisette et chocolat</b><br>Glace au caramel brun et sel de Guérande</p>
+                        <div class="menu__titre">
+                            <p><b>Macaron noisette et chocolat</b></p>
+                            <div class="menu__prix">
+                                <p>Glace au caramel brun et sel de Guérande</p>
+                                <p>18€</p>
+                            </div>
                         </div>
-                        <div class="menu__desserts__prix"><b>18€</b></div>
-                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
-                        <div class="menu__desserts__titre">
-                            <p><b>Baba au rhum revisité</b><br>Avec son coulis de citron</p>
+                        <div class="menu__titre">
+                            <p><b>Baba au rhum revisité </b></p>
+                            <div class="menu__prix">
+                                <p>Avec son coulis de citron</p>
+                                <p>22€</p>
+                            </div>
                         </div>
-                        <div class="menu__desserts__prix"><b>22€</b></div>
-                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
+
                     <div class="btn__menu">
-                        <div class="menu__desserts__titre">
-                            <p><b>Tarte au citron meringuée</b><br>Déstructurée</p>
+                        <div class="menu__titre">
+                            <p><b>Tarte au citron meringuée</b></p>
+                            <div class="menu__prix">
+                                <p>Déstructurée</p>
+                                <p>23€</p>
+                            </div>
                         </div>
-                        <div class="menu__desserts__prix"><b>23€</b></div>
-                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
+
+
+
                 </div>
-
             </div>
 
 
