--- a/menu3.html
+++ b/menu3.html
@@ -45,93 +45,135 @@
                 <!--Entrées-->
 
 
-                <div class="menu__entrees">
+                <div class="menu__choix">
                     <h2>ENTRÉES</h2>
                     <hr>
 
                     <div class="btn__menu">
-                        <div class="menu__entrees__titre">
-                            <p><b>Tartare de poulpe acidulé</b><br>Aux zestes d'orange</p>
+                        <div class="menu__titre">
+                            <p><b>Tartare de poulpe acidulé</b></p>
+                            <div class="menu__prix">
+                                <p>Aux zestes d'orange</p>
+                                <p>25€</p>
+                            </div>
                         </div>
-                        <div class="menu__entrees__prix"><b>25€</b></div>
-                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
-                        <div class="menu__entrees__titre">
-                            <p><b>Velouté de légumes d'antan</b><br>Carotte, panais, topinambour</p>
+                        <div class="menu__titre">
+                            <p><b>Velouté de légumes d'antan</b></p>
+                            <div class="menu__prix">
+                                <p>Carotte, panais, topinambour</p>
+                                <p>35€</p>
+                            </div>
                         </div>
-                        <div class="menu__entrees__prix"><b>35€</b></div>
-                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
-                        <div class="menu__entrees__titre">
-                            <p><b>Soupe à l'oignon</b><br>Revisitée</p>
+                        <div class="menu__titre">
+                            <p><b>Soupe à l'oignon</b></p>
+                            <div class="menu__prix">
+                                <p>Revisitée</p>
+                                <p>20€</p>
+                            </div>
                         </div>
-                        <div class="menu__entrees__prix"><b>20€</b></div>
-                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
-                    </div>
 
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
+                    </div>
                 </div>
 
                 <!--plats-->
-                <div class="menu__plats">
+                <div class="menu__choix">
                     <h2>PLATS</h2>
                     <hr>
                     <div class="btn__menu">
-                        <div class="menu__plats__titre">
-                            <p><b>Coquilles Saint-Jacques</b><br>Accompagnées d'une purée de panais</p>
+                        <div class="menu__titre">
+                            <p><b>Coquilles Saint-Jacques</b></p>
+                            <div class="menu__prix">
+                                <p>Accompagnées d'une purée de panais</p>
+                                <p>40€</p>
+                            </div>
                         </div>
-                        <div class="menu__plats__prix"><b>40€</b></div>
-                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
+                    </div>
+
+
+
+                    <div class="btn__menu">
+                        <div class="menu__titre">
+                            <p><b>Magret de canard</b></p>
+                            <div class="menu__prix">
+                                <p>Et parmentier de pommes de terre</p>
+                                <p>35€</p>
+                            </div>
+                        </div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
-                        <div class="menu__plats__titre">
-                            <p><b>Magret de canard</b><br>Et parmentier de pommes de terre</p>
+                        <div class="menu__titre">
+                            <p><b>Pigeonneau d’Ille-et-Vilaine</b></p>
+                            <div class="menu__prix">
+                                <p>Sur son lit de gnocchis aux légumes</p>
+                                <p>44€</p>
+                            </div>
                         </div>
-                        <div class="menu__plats__prix"><b>35€</b></div>
-                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
-                    </div>
 
-                    <div class="btn__menu">
-                        <div class="menu__plats__titre">
-                            <p><b>Pigeonneau d’Ille-et-Vilaine</b><br>Sur son lit de gnocchis aux légumes</p>
-                        </div>
-                        <div class="menu__plats__prix"><b>44€</b></div>
-                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
+
                 <!--desserts-->
-                <h2>DESSERTS</h2>
-                <hr>
-                <div class="menu__desserts">
+
+                <div class="menu__choix">
+                    <h2>DESSERTS</h2>
+                    <hr>
+
                     <div class="btn__menu">
-                        <div class="menu__desserts__titre">
-                            <p><b>Pétales de violettes glacés</b><br>Et purée de noisettes</p>
+                        <div class="menu__titre">
+                            <p><b>Pétales de violettes glacés</b></p>
+                            <div class="menu__prix">
+                                <p>Et purée de noisettes</p>
+                                <p>18€</p>
+                            </div>
                         </div>
-                        <div class="menu__desserts__prix"><b>18€</b></div>
-                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
-                        <div class="menu__desserts__titre">
-                            <p><b>Fondant au chocolat</b><br>Revisité</p>
+                        <div class="menu__titre">
+                            <p><b>Fondant au chocolat</b></p>
+                            <div class="menu__prix">
+                                <p>Revisité</p>
+                                <p>22€</p>
+                            </div>
                         </div>
-                        <div class="menu__desserts__prix"><b>22€</b></div>
-                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
+
                     <div class="btn__menu">
-                        <div class="menu__desserts__titre">
-                            <p><b>Millefeuille croustillant</b><br>Myrtilles et pâte d’amande</p>
+                        <div class="menu__titre">
+                            <p><b>Millefeuille croustillant</b></p>
+                            <div class="menu__prix">
+                                <p>Myrtilles et pâte d’amande</p>
+                                <p>23€</p>
+                            </div>
                         </div>
-                        <div class="menu__desserts__prix"><b>23€</b></div>
-                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
+
+
+
                 </div>
-
             </div>
 
 
