--- a/menu4.html
+++ b/menu4.html
@@ -45,93 +45,135 @@
                 <!--Entrées-->
 
 
-                <div class="menu__entrees">
+                <div class="menu__choix">
                     <h2>ENTRÉES</h2>
                     <hr>
 
                     <div class="btn__menu">
-                        <div class="menu__entrees__titre">
-                            <p><b>Tartare de thon</b><br>Assaisonné au yuzu</p>
+                        <div class="menu__titre">
+                            <p><b>Tartare de thon</b></p>
+                            <div class="menu__prix">
+                                <p>Assaisonné au yuzu</p>
+                                <p>25€</p>
+                            </div>
                         </div>
-                        <div class="menu__entrees__prix"><b>25€</b></div>
-                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
-                        <div class="menu__entrees__titre">
-                            <p><b>Bouchée de homard croustillant</b><br>Et sa farandole de petits légumes</p>
+                        <div class="menu__titre">
+                            <p><b>Bouchée de homard croustillant </b></p>
+                            <div class="menu__prix">
+                                <p>Et sa farandole de petits légumes</p>
+                                <p>35€</p>
+                            </div>
                         </div>
-                        <div class="menu__entrees__prix"><b>35€</b></div>
-                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
-                        <div class="menu__entrees__titre">
-                            <p><b>Velouté de cèpes </b><br>Aux truffes</p>
+                        <div class="menu__titre">
+                            <p><b>Velouté de cèpes </b></p>
+                            <div class="menu__prix">
+                                <p>Aux truffes</p>
+                                <p>20€</p>
+                            </div>
                         </div>
-                        <div class="menu__entrees__prix"><b>20€</b></div>
-                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
-                    </div>
 
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
+                    </div>
                 </div>
 
                 <!--plats-->
-                <div class="menu__plats">
+                <div class="menu__choix">
                     <h2>PLATS</h2>
                     <hr>
                     <div class="btn__menu">
-                        <div class="menu__plats__titre">
-                            <p><b>Poulet rôti aux herbes de Provence </b><br>Et sa crème de truffe</p>
+                        <div class="menu__titre">
+                            <p><b>Poulet rôti aux herbes de Provence</b></p>
+                            <div class="menu__prix">
+                                <p>Et sa crème de truffe</p>
+                                <p>40€</p>
+                            </div>
                         </div>
-                        <div class="menu__plats__prix"><b>40€</b></div>
-                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
+                    </div>
+
+
+
+                    <div class="btn__menu">
+                        <div class="menu__titre">
+                            <p><b>Langouste rôtie</b></p>
+                            <div class="menu__prix">
+                                <p>Et ses légumes de saison</p>
+                                <p>35€</p>
+                            </div>
+                        </div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
-                        <div class="menu__plats__titre">
-                            <p><b>Langouste rôtie</b><br>Et ses légumes de saison</p>
+                        <div class="menu__titre">
+                            <p><b>Côte de boeuf Angus</b></p>
+                            <div class="menu__prix">
+                                <p>Et sa purée de panais</p>
+                                <p>44€</p>
+                            </div>
                         </div>
-                        <div class="menu__plats__prix"><b>35€</b></div>
-                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
-                    </div>
 
-                    <div class="btn__menu">
-                        <div class="menu__plats__titre">
-                            <p><b>Côte de boeuf Angus</b><br>Et sa purée de panais</p>
-                        </div>
-                        <div class="menu__plats__prix"><b>44€</b></div>
-                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
                 </div>
+
                 <!--desserts-->
-                <h2>DESSERTS</h2>
-                <hr>
-                <div class="menu__desserts">
+
+                <div class="menu__choix">
+                    <h2>DESSERTS</h2>
+                    <hr>
+
                     <div class="btn__menu">
-                        <div class="menu__desserts__titre">
-                            <p><b>Farandole de desserts</b><br>Du chef</p>
+                        <div class="menu__titre">
+                            <p><b>Farandole de desserts</b></p>
+                            <div class="menu__prix">
+                                <p>Du chef</p>
+                                <p>18€</p>
+                            </div>
                         </div>
-                        <div class="menu__desserts__prix"><b>18€</b></div>
-                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
                     <div class="btn__menu">
-                        <div class="menu__desserts__titre">
-                            <p><b>Crème brulée </b><br>Revisitée</p>
+                        <div class="menu__titre">
+                            <p><b>Crème brulée</b></p>
+                            <div class="menu__prix">
+                                <p>Revisitée</p>
+                                <p>22€</p>
+                            </div>
                         </div>
-                        <div class="menu__desserts__prix"><b>22€</b></div>
-                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
 
+
                     <div class="btn__menu">
-                        <div class="menu__desserts__titre">
-                            <p><b>Tiramisu</b><br>À la noisette</p>
+                        <div class="menu__titre">
+                            <p><b>Tiramisu</b></p>
+                            <div class="menu__prix">
+                                <p>À la noisette</p>
+                                <p>23€</p>
+                            </div>
                         </div>
-                        <div class="menu__desserts__prix"><b>23€</b></div>
-                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+                        <div class="menu__check"><i class="fas fa-check-circle"></i></div>
                     </div>
+
+
+
                 </div>
-
             </div>
 
 
