validateur html/css correction

--- a/index.html
+++ b/index.html
@@ -124,11 +124,12 @@
                 </div>
 
             </section>
+        </div>
 
 
     </main>
 
-    </div>
+
 
 
 
@@ -136,7 +137,7 @@
     <!--Footer-->
 
     <footer class="footer">
-        <img src="./Maquettes/images/logo/ohmyfood.png">
+        <img src="./Maquettes/images/logo/ohmyfood.png" alt="logo de ohmyfood">
         <ul class="footer__liste">
             <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
             <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
