--- a/menu1.html
+++ b/menu1.html
@@ -34,7 +34,7 @@
         <div class="background1"></div>
 
         <!--Menu-->
-        <div class="menu">
+        <section class="menu">
 
             <div class="menu__name">
                 <h1>La palette du goût</h1>
@@ -180,7 +180,8 @@
 
 
 
-        </div>
+        </section>
+
 
 
 
@@ -190,18 +191,20 @@
         </div>
 
 
-        </section>
+
     </main>
 
 
     <!--footer-->
     <footer class="footer">
-        <img src="./Maquettes/images/logo/ohmyfood.png">
+        <img src="./Maquettes/images/logo/ohmyfood.png" alt="logo de  ohmyfood">
         <div class="footer__liste">
-            <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
-            <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="mailto:hello@gmail.com">Contact</a></li>
+            <ul>
+                <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="mailto:hello@gmail.com">Contact</a></li>
+            </ul>
         </div>
     </footer>
 </body>
