--- a/menu3.html
+++ b/menu3.html
@@ -177,26 +177,30 @@
 
                 </div>
             </div>
-
-
-            <!--Bouton commander-->
-            <div class="commander">
-                <button class="btn__action">Commander</button>
-            </div>
-
-
         </section>
+
+
+        <!--Bouton commander-->
+        <div class="commander">
+            <button class="btn__action">Commander</button>
+        </div>
+
+
+
+
     </main>
 
 
     <!--footer-->
     <footer class="footer">
-        <img src="./Maquettes/images/logo/ohmyfood.png">
+        <img src="./Maquettes/images/logo/ohmyfood.png" alt="logo de  ohmyfood">
         <div class="footer__liste">
-            <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
-            <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="mailto:hello@gmail.com">Contact</a></li>
+            <ul>
+                <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="mailto:hello@gmail.com">Contact</a></li>
+            </ul>
         </div>
     </footer>
 </body>
