arrangement images background sur les menu

--- a/menu1.html
+++ b/menu1.html
@@ -31,7 +31,8 @@
 
     <main>
         <!--Image background-->
-        <div class="background1"></div>
+        <div class="background">
+            <img src="./Maquettes/images/restocomp/jay-wennington-N_Y88TWmGwA-unsplash.jpg" /> </div>
 
         <!--Menu-->
         <section class="menu">
