--- a/menu3.html
+++ b/menu3.html
@@ -31,7 +31,9 @@
 
     <main>
         <!--Image background-->
-        <div class="background3"></div>
+        <div class="background">
+            <img src="./Maquettes/images/restocomp/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+        </div>
 
         <!--Menu-->
         <section class="menu">
