--- a/menu4.html
+++ b/menu4.html
@@ -31,7 +31,9 @@
 
     <main>
         <!--Image background-->
-        <div class="background4"></div>
+        <div class="background">
+            <img src="./Maquettes/images/restocomp/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+        </div>
 
         <!--Menu-->
         <section class="menu">
