--- a/menu2.html
+++ b/menu2.html
@@ -31,7 +31,9 @@
 
     <main>
         <!--Image background-->
-        <div class="background2"></div>
+        <div class="background">
+            <img src="./Maquettes/images/restocomp/stil-u2Lp8tXIcjw-unsplash.jpg">
+        </div>
 
         <!--Menu-->
         <section class="menu">
