ajustement taille img laptop

--- a/menu1.html
+++ b/menu1.html
@@ -32,7 +32,7 @@
     <main>
         <!--Image background-->
         <div class="background">
-            <img src="./Maquettes/images/restocomp/jay-wennington-N_Y88TWmGwA-unsplash.jpg" /> </div>
+            <img src="./Maquettes/images/restocomp/jay-wennington-N_Y88TWmGwA-unsplash.jpg"> </div>
 
         <!--Menu-->
         <section class="menu">
